2010-05-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-range.cc (octave_range::index_vector): Optimize order of
	conditions.

2010-05-08  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::do_non_const_unary_op): Always return *this as
	octave_value&. Remove unused overload.
	* oct-lvalue.cc (octave_lvalue::do_unary_op): Simplify.
	* pt-unop.cc (tree_prefix_expression::rvalue1,
	tree_postfix_expression::rvalue1): Remove dummy rvalue1 calls.

2010-05-07  Michael Goffioul  <michael.goffioul@gmail.com>

	* ov-base.h (Vsparse_auto_mutate): Add OCTINTERP_API tag.

2010-05-07  John W. Eaton  <jwe@octave.org>

	* octave.cc (maximum_braindamage): Set value of internal
	variable Vallow_noninteger_range_as_index to true instead of
	setting Octave:allow-noninteger-ranges-as-indices warning state.
	* ov-range.cc (Fallow_noninteger_range_as_index): New function.
	(Vallow_noninteger_range_as_index): New variable.
	(octave_range::index_vector): Only allow non-integer range as
	index if Vallow_noninteger_range_as_index is true.
	(octave_range::bool_array_value): Move definition here from ov-range.h.
	* ov-range.h (Vallow_noninteger_range_as_index): Provide decl.
	* utils.cc (reset_warning_state): Delete.
	(Fisindex): Temporarily set Vallow_noninteger_range_as_index
	instead of changing warning state for
	Octave:allow-noninteger-ranges-as-indices to "error".

2010-05-06  John W. Eaton  <jwe@octave.org>

	* xgl2ps.c: Don't compile gl2ps.c unless we have OpenGL.
	From Petr Mikulik <mikulik>.

2010-05-06  John W. Eaton  <jwe@octave.org>

	* ov-range.cc (octave_range::index_vector):
	Improve warning/error message.

2010-05-06  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/sqrtm.cc (sqrtm_utri_inplace, do_sqrtm): New helper
	functions.
	(Fsqrtm): Rewrite.

2010-05-06  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/schur.cc (Fschur): Recognize "complex" option for
	Matlab compatibility. Simplify argument handling and improve error
	messages.
